# systemd-query

./: .gitignore  flake.nix  main.py  pyproject.toml
query/: main.py  services.py
