[project]
name = "systemd-query"
version = "0.1.0"
description = "Python systemd query tool"
requires-python = ">=3.12"
dependencies = [
    "pystemd>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["query"]

[project.scripts]
systemd-query = "query.main:main"

[tool.uv.extra-build-dependencies]
pystemd = ["setuptools"]

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
]
